# codex_multi_agent_demo

./: AGENTS.md  pyproject.toml
agents/administration/: README.md  __init__.py  agent.py
agents/croaked/: README.md  __init__.py  game.py
agents/personal_inventory/: README.md  __init__.py  agent.py
agents/research/: README.md  __init__.py  agent.py
agents/routing/: README.md  __init__.py  agent.py
core/: __init__.py  base.py  contexts.py  google_adk.py  llm.py  registry.py  router.py
docs/: overview.md
scripts/: __init__.py  run_croaked.py  run_demo.py
tests/routing/: test_agent.py
